# Foto

./: .clang-format  .gitignore  Makefile  README.md  config.mk  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
assets/: Foto.xcf  LICENSE
completions/: foto.bash  foto.fish  foto.zsh
man/: foto.1.md
man/man1/: foto.1.md
src/: arg.c  arg.h  color.c  color.h  cover.c  cover.h  image.c  image.h  img.c  img.h  main.c  main.h  term.c  term.h  util.c  util.h
